# abliterator

./: .gitignore  LICENSE  README.md  mjc_research_journal.md  pyproject.toml
abliterator/: gen.py
abliterator/eval/: ppx.py  pref.py
nbs/: 01_abliterate copy.ipynb  01_abliterate lr.ipynb  01_abliterate.ipynb  01_abliterate_complex_tokensdim_broken.ipynb  01_abliterate_lr.ipynb  02_abliterate.ipynb  02b_abliterate_lr.ipynb  03b_abliterate_lr_pair.ipynb  03b_abliterate_lr_pair_direct.ipynb  03b_abliterate_lr_pair_sklearn.ipynb  03b_abliterate_lr_pair_sup.ipynb  03b_abliterate_lr_pair_sup_OK.ipynb  03b_abliterate_lr_pair_sup_direct.ipynb
