[project]
name = "abliterator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "activation-store",
    "baukit",
    "colorama>=0.4.6",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "jaxtyping>=0.2.38",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "transformers>=4.49.0",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" }
activation-store = { path = "../../elk/cache_transformer_acts", editable = true }
# activation-store = { git = "https://github.com/wassname/activation_store.git" }
# activation-store = { git = "https://github.com/wassname/activation_store.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
